<resources>
    <string name="app_name">MyQuizz</string>
    <string name="toast_message">Please enter your name</string>

    <string name="toast_welcome">Welcome</string>

    <string name="close">Close</string>
    <string name="open">Open</string>

    <string name="dark_mode_str">Dark mode</string>

    <string-array name="languages_spinner">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="save_btn">Save changes ?</string>

    <string name="phone_placeholder">Phone</string>
    <string name="name_placeholder">Name</string>
    <string name="birthDay_placeholder">Birthday</string>
    <!-- Strings for button menu and relation to menu like btn home page-->
    <string name="home_menu">Home</string>
    <string name="settings_menu">Settings</string>
    <string name="account_menu">Account</string>
    <string name="quiz_menu">Quiz</string>
    <string name="quit_menu">Quit</string>


    <!-- Strings for the button content -->
    <string name="start_desc">START</string>
    <string name="finish_desc">FINISH</string>
    <string name="nextques_desc">NEXT QUESTION</string>
    <string name="submit_desc">SUBMIT</string>

    <!-- Strings for the Welcome Page-->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_description">Please enter your name</string>
    <string name="name_hint">Name</string>

    <!-- Strings for the result page -->
    <string name="result_title">Results</string>
    <string name="result_congratulations">Congratulations !</string>
    <string name="score_message">Your Score is :</string>

    <!-- Strings for Question 1-->
    <string name="question_one">Who is this actress?</string>

    <string name="question_one_answer_one">Emma Watson</string>
    <string name="question_one_answer_two">Jenna Ortega</string>
    <string name="question_one_answer_three">Mia Khalifa</string>
    <string name="question_one_answer_four">I don\'t know</string>

    <!-- Strings for Question 2 -->
    <string name="question_two">How many squares is there in this picture?</string>

    <string name="question_two_answer_one">16</string>
    <string name="question_two_answer_two">32</string>
    <string name="question_two_answer_three">40</string>
    <string name="question_two_answer_four">I don\'t know</string>

    <!-- Strings for Question 3 -->
    <string name="question_three">Which country is this picture based on?</string>

    <string name="question_three_answer_one">England</string>
    <string name="question_three_answer_two">Egypt</string>
    <string name="question_three_answer_three">Narnia</string>
    <string name="question_three_answer_four">I don\'t know</string>


    <!-- Strings for Question 4 -->
    <string name="question_four">Which country\'s flag is this?</string>

    <string name="question_four_answer_one">New Zealand</string>
    <string name="question_four_answer_two">Fiji</string>
    <string name="question_four_answer_three">Scotland</string>
    <string name="question_four_answer_four">I don\'t know</string>

    <!-- Strings for Question 5 -->
    <string name="question_five">Did you like this Quiz?</string>

    <string name="question_five_answer_one">Yes</string>
    <string name="question_five_answer_two">No</string>
    <string name="question_five_answer_three">Maybe</string>
    <string name="question_five_answer_four">I don\'t know</string>

    <!-- Strings for Question 6 -->
    <string name="question_six">What note do I deserve?</string>

    <string name="question_six_answer_one">20/20</string>
    <string name="question_six_answer_two">15/20</string>
    <string name="question_six_answer_three">10/20</string>
    <string name="question_six_answer_four">0/20</string>


    <string name="Quiz">Quiz</string>
    <string name="txt_date">--/--/--</string>
    <string name="btn_save_data_txt">Save</string>

</resources>