<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/btn_quiz_home"
                android:text="@string/quiz_menu" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_setting_home"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/settings_menu" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_account_home"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/account_menu" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_quit_home"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/quit_menu" />
        </GridLayout>
    </ScrollView>

</FrameLayout>