<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="177dp"
            android:layout_marginBottom="179dp"
            android:text="@string/name_placeholder"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/txt_indicator_date"
            app:layout_constraintEnd_toStartOf="@+id/editUserTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_indicator_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="41dp"
            android:text="@string/birthDay_placeholder"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUserTextPhone" />

        <EditText
            android:id="@+id/editUserTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:ems="10"
            android:hint="@string/name_placeholder"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_user_name" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/txt_date"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="@+id/editUserTextPhone"
            app:layout_constraintStart_toStartOf="@+id/editUserTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editUserTextPhone" />

        <EditText
            android:id="@+id/editUserTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="267dp"
            android:layout_marginEnd="14dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_placeholder"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_user_phone"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_save_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:text="@string/btn_save_data_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/phone_placeholder"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/editUserTextPhone"
            app:layout_constraintEnd_toStartOf="@+id/editUserTextPhone"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>