<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndQuizFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bg"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/result_title"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="image"
                android:src="@drawable/ic_trophy" />

            <TextView
                android:id="@+id/result_congratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/result_congratulations"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/result_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Username" />

            <TextView
                android:id="@+id/result_userscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="20sp"
                tools:text="Your Score is 0 out of 6" />

            <Button
                android:id="@+id/finishBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:text="@string/finish_desc"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>